--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ buildscript {
         maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-beta05'
-        classpath 'io.fabric.tools:gradle:1.25.4'
+        classpath 'com.android.tools.build:gradle:3.5.0-rc01'
+        classpath 'io.fabric.tools:gradle:1.30.0'
         classpath 'com.google.gms:google-services:4.3.0'
 
     }
@@ -37,7 +37,7 @@ allprojects {
 
 
 ext {
-    appVersion = "0.1.0"
+    appVersion = "0.1.0-dev"
     appVersionCode = 1
 
     minterMinSdk = 21
