--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,8 @@ allprojects {
 
 
 ext {
-    appVersion = "0.1.0-dev03"
-    appVersionCode = 3
+    appVersion = "1.0.0-beta01"
+    appVersionCode = 4
 
     minterMinSdk = 21
     minterMaxSdk = 28
