--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,8 +84,6 @@ android {
 }
 
 dependencies {
-    implementation project(':centrifuge')
-
     netTestImplementation([
             "network.minter.android:minter-android-core-testnet:${minterCoreSDK}",
             "network.minter.android:minter-android-explorer-testnet:${minterExplorerSDK}",
@@ -112,18 +110,20 @@ dependencies {
     ])
 
     // support
-    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
-    implementation 'androidx.core:core:1.2.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core:1.2.0-beta01'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.preference:preference:1.0.0'
+    implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation 'androidx.vectordrawable:vectordrawable:1.1.0-rc01'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0-alpha08'
+    implementation 'com.google.android.material:material:1.1.0-beta01'
     implementation 'com.google.android:flexbox:1.1.0'
+
+    implementation 'io.github.centrifugal:centrifuge-java:0.0.2'
 
     //qr
     implementation 'com.google.zxing:core:3.3.3'
@@ -157,10 +157,10 @@ dependencies {
     annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:3.3.1"
 
     // Annotations and DI
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.23.2'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.23.2'
-    implementation 'com.google.dagger:dagger:2.23.2'
-    implementation 'com.google.dagger:dagger-android-support:2.23.2'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.24'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.24'
+    implementation 'com.google.dagger:dagger:2.24'
+    implementation 'com.google.dagger:dagger-android-support:2.24'
     compileOnly 'javax.annotation:jsr250-api:1.0'
 
     //mvp
