--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,9 @@ buildscript {
         maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-rc03'
+        classpath 'com.android.tools.build:gradle:3.5.1'
         classpath 'io.fabric.tools:gradle:1.30.0'
-        classpath 'com.google.gms:google-services:4.3.0'
+        classpath 'com.google.gms:google-services:4.3.2'
 
     }
 }
@@ -37,18 +37,17 @@ allprojects {
 
 
 ext {
-    appVersion = "1.0.0-beta02"
-    appVersionCode = 7
+    appVersion = "1.0.0-beta03"
+    appVersionCode = 8
 
     minterMinSdk = 21
-    minterMaxSdk = 28
-    minterLibSupport = "28.0.0"
-    minterBuildTools = "28.0.3"
+    minterMaxSdk = 29
+    minterBuildTools = "29.0.2"
 
-    minterExplorerSDK = "0.4.3"
+    minterExplorerSDK = "0.6.0"
     minterProfileSDK = "0.2.4"
-    minterBlockchainSDK = "0.7.5"
-    minterCoreSDK = "0.4.0"
+    minterBlockchainSDK = "0.9.2"
+    minterCoreSDK = "0.6.0"
 }
 
 task clean(type: Delete) {
