--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ android {
             applicationId = "io.monke.app"
             buildConfigField "String", "BANANA_COIN", '"BANANA"'
             buildConfigField "String", "LIVE_BALANCE_URL", '"wss://explorer-rtm.apps.minter.network/connection/websocket"'
+            buildConfigField "String", "EXPLORER_API_URL", 'null'
+            buildConfigField "String", "GATE_API_URL", 'null'
         }
 
         netMainNoCrashlytics {
@@ -65,6 +67,8 @@ android {
             applicationId = "io.monke.app"
             buildConfigField "String", "BANANA_COIN", '"BANANA"'
             buildConfigField "String", "LIVE_BALANCE_URL", '"wss://explorer-rtm.apps.minter.network/connection/websocket"'
+            buildConfigField "String", "EXPLORER_API_URL", 'null'
+            buildConfigField "String", "GATE_API_URL", 'null'
         }
 
         netTest {
@@ -72,6 +76,8 @@ android {
             applicationId = "io.monke.app"
             buildConfigField "String", "BANANA_COIN", '"BANANATEST"'
             buildConfigField "String", "LIVE_BALANCE_URL", '"wss://explorer-rtm.testnet.minter.network/connection/websocket"'
+            buildConfigField "String", "EXPLORER_API_URL", 'null'
+            buildConfigField "String", "GATE_API_URL", 'null'
         }
 
         netTestNoCrashlytics {
@@ -79,6 +85,8 @@ android {
             applicationId = "io.monke.app"
             buildConfigField "String", "BANANA_COIN", '"BANANATEST"'
             buildConfigField "String", "LIVE_BALANCE_URL", '"wss://explorer-rtm.testnet.minter.network/connection/websocket"'
+            buildConfigField "String", "EXPLORER_API_URL", 'null'
+            buildConfigField "String", "GATE_API_URL", 'null'
         }
     }
 }
@@ -111,16 +119,16 @@ dependencies {
 
     // support
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core:1.2.0-beta01'
+    implementation 'androidx.core:core:1.2.0-rc01'
     implementation 'androidx.annotation:annotation:1.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'androidx.exifinterface:exifinterface:1.0.0'
+    implementation 'androidx.exifinterface:exifinterface:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0-beta01'
+    implementation 'com.google.android.material:material:1.2.0-alpha03'
     implementation 'com.google.android:flexbox:1.1.0'
 
     implementation 'io.github.centrifugal:centrifuge-java:0.0.2'
